web/showtime/backend/src/main/sass/components/_discord-invite-wrapper.scss
.discord-invite-wrapper {
    display: flex;
    flex-direction: column;
    background-color: #f2f3f5;
    border-radius: 3px;
    padding: 1em;
    gap: 0.5em;
    transition-duration: 1.0s;
    width: fit-content;

    &:hover {
        transform: scale(1.02);
        box-shadow: 0 0 15px rgba(0, 0, 0, 0.3);
    }

    .discord-invite-title {
        text-transform: uppercase;
        font-weight: bold;
        font-size: 0.75em;
    }

    .discord-server-details {
        display: flex;
        gap: 1em;

        .discord-server-icon {
            flex-shrink: 0;

            img {
                border-radius: 25%;
                width: 50px;
                height: 50px;
                display: block;
            }
        }

        .discord-server-info {
            line-height: 1.0;
            flex-direction: column;
            display: flex;
            justify-content: center;
            align-self: stretch;
            flex-shrink: 1;

            .discord-server-name {
                font-weight: bold;
            }

            .discord-server-description {
                font-size: 0.9em;
            }
        }

        .discord-server-button {
            margin-left: auto;
            background-color: #3ba55d;
            border-radius: 3px;
            color: white;
            font-size: 0.9em;
            font-weight: bold;
            display: flex;
            align-items: center;
            padding-left: 1em;
            padding-right: 1em;
            height: 40px;
            transition-duration: 0.5s;

            &:hover {
                background-color: #2d7d47;
            }
        }
    }
}

